--- a/ProjectKiwi/src/edu/augustana/csc285/kiwi/TrackScreen.fxml
+++ b/ProjectKiwi/src/edu/augustana/csc285/kiwi/TrackScreen.fxml
@@ -60,9 +60,13 @@
                     <menus>
                       <Menu mnemonicParsing="false" text="File">
                         <items>
-                          <MenuItem mnemonicParsing="false" onAction="#handleSaveProgress" text="Export Project" />
                               <MenuItem mnemonicParsing="false" text="Import Project" />
-                              <MenuItem mnemonicParsing="false" onAction="#ExportToCSVFile" text="Save as CSV" />
+                              <Menu mnemonicParsing="false" text="Save As">
+                                <items>
+                                <MenuItem mnemonicParsing="false" onAction="#handleSaveProgress" text="Export Project" />
+                                    <MenuItem mnemonicParsing="false" onAction="#ExportToCSVFile" text="Save as CSV" />
+                                </items>
+                              </Menu>
                         </items>
                       </Menu>
                       <Menu mnemonicParsing="false" text="Edit">
