--- a/ProjectKiwi/src/edu/augustana/csc285/kiwi/TrackScreen.fxml
+++ b/ProjectKiwi/src/edu/augustana/csc285/kiwi/TrackScreen.fxml
@@ -1,12 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import javafx.scene.canvas.*?>
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-<?import javafx.geometry.Insets?>
+
+<?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.ColorPicker?>
@@ -15,9 +9,9 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Slider?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="677.0" prefWidth="850.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.augustana.csc285.kiwi.TrackScreenController">
@@ -59,7 +53,7 @@
                     <menus>
                       <Menu mnemonicParsing="false" text="File">
                         <items>
-                              <MenuItem mnemonicParsing="false" text="Import Project" />								
+                              <MenuItem mnemonicParsing="false" onAction="#handleSaveProgress" text="Export Project" />								
                               <Menu mnemonicParsing="false" text="Save As">
                                 <items>
                                 <MenuItem mnemonicParsing="false" onAction="#ExportTimePointToCSVFile" text="Export Time points" />
